[project]
name = "travix-albano"
version = "0.1.0"
description = ""
authors = [
    {name = "albanoGonzalez",email = "albanologro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "google-cloud-pubsub (>=2.28.0,<3.0.0)",
    "google-cloud-bigquery (>=3.29.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
